fixed button "add teacher"; added ability of editing total hours.